# sol_polykit

./: .gitignore  README.md  pyproject.toml
sol_polykit/: __init__.py  sol_polykit.py  utils.py
tests/: test_sol_polykit.py
