[tool.poetry]
name = "sol_polykit"
version = "0.1.0"
description = ""
authors = ["Rishi Gurnani <rgurnani96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rdkit-pypi = "^2022.9"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
